test/visibility/rename/renameUsedMod/renameModRenameSymBadAccess3.good
renameModRenameSymBadAccess3.chpl:8: In function 'main':
renameModRenameSymBadAccess3.chpl:11: error: 'Foo' undeclared (first use this function)
